fixed z-index bug with overlay fixed search-bar error changed some divs to nav, header, section

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -33,6 +33,7 @@ body, html {
 #navigation.reveal-menu .menu-overlay {
     opacity: 1;
     pointer-events: auto;
+    z-index: 20;
 }
 
 #navigation .menu {
